updated notebook for vae

--- a/notebook/jetautoencoder_vae.ipynb
+++ b/notebook/jetautoencoder_vae.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "divided-wealth",
+   "id": "acknowledged-input",
    "metadata": {},
    "source": [
     "import library"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "corrected-suggestion",
+   "id": "billion-fluid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "royal-gospel",
+   "id": "level-tanzania",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +57,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "nuclear-monster",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 64"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "bored-congo",
+   "id": "tender-aside",
    "metadata": {},
    "source": [
     "loss function"
@@ -67,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unauthorized-dubai",
+   "id": "authentic-formation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecological-inclusion",
+   "id": "invalid-nancy",
    "metadata": {},
    "source": [
     "build model"
@@ -112,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "boolean-prison",
+   "id": "devoted-livestock",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,12 +158,13 @@
     "    x_pred = decoder(z)\n",
     "\n",
     "    vae = Model(inputs=[x, eps], outputs=x_pred, name='vae')\n",
-    "    vae.compile(optimizer='rmsprop', loss=nll)"
+    "    vae.compile(optimizer='rmsprop', loss=nll)\n",
+    "    return vae"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "egyptian-leonard",
+   "id": "smart-bible",
    "metadata": {},
    "source": [
     "load data"
@@ -162,34 +173,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "invalid-newfoundland",
+   "id": "marked-journalist",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_df(root_file_name, branches):\n",
-    "    f = uproot.open(root_file_name)\n",
-    "    if len(f.allkeys()) == 0:\n",
-    "        return pd.DataFrame()\n",
-    "    df = pd.DataFrame(uproot.open(root_file_name)[\"tree\"].arrays(branches))\n",
-    "    #df = pd.DataFrame(uproot.open(root_file_name)[\"tree\"].arrays(branches, namedecode=\"utf-8\"))\n",
+    "def get_df(root_file_name, filter_name):\n",
+    "    events = uproot.open(root_file_name, filter_name=filter_name)[\"tree\"]\n",
+    "    df = events.arrays(library=\"pd\")\n",
     "    return df\n",
     "\n",
     "inputfile = 'test.root'\n",
     "df = get_df(inputfile, '*')\n",
+    "df.dropna(inplace=True)\n",
     "\n",
     "features = ['Jet_pt']\n",
     "features = sorted(features)\n",
     "\n",
     "X = df[features]\n",
-    "x_train, x_test = train_test_split(X, test_size=0.20)\n",
-    "\n",
-    "x_train_dataset = tf.data.Dataset.from_tensor_slices(x_train)\n",
-    "x_test_dataset = tf.data.Dataset.from_tensor_slices(x_test)"
+    "x_train, x_test = train_test_split(X, test_size=0.20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "military-firewall",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_dset(df): \n",
+    "    df = df.copy()\n",
+    "    dataset = tf.data.Dataset.from_tensor_slices((dict(df), dict(df)))\n",
+    "    dataset = dataset.batch(batch_size, drop_remainder=False)\n",
+    "    dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
+    "    return dataset\n",
+    "    \n",
+    "x_train_dataset = build_dset(x_train)\n",
+    "x_test_dataset = build_dset(x_test)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "caroline-force",
+   "id": "friendly-binary",
    "metadata": {},
    "source": [
     "get model"
@@ -198,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "political-queens",
+   "id": "secret-founder",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "academic-falls",
+   "id": "statutory-infrared",
    "metadata": {},
    "source": [
     "train model"
@@ -222,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conceptual-athens",
+   "id": "great-while",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,16 +278,15 @@
     "                                                 save_best_only=False,\n",
     "                                                 mode = 'min',\n",
     "                                                 verbose=1)\n",
-    "batch_size = 64\n",
+    "\n",
     "num_epochs = 20\n",
     "\n",
     "history = model.fit(\n",
     "    x_train_dataset,\n",
-    "    x_train_dataset,\n",
     "    shuffle=True,\n",
     "    epochs=num_epochs,\n",
     "    batch_size=batch_size,\n",
-    "    validation_data=(x_test_dataset, x_test_dataset),\n",
+    "    validation_data=x_test_dataset,\n",
     "    callbacks=[cp_callback, get_lr_callback()]\n",
     ")"
    ]
@@ -271,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "southwest-diameter",
+   "id": "loaded-wells",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -293,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
