updated, not working currently

--- a/notebook/jetautoencoder_vae.ipynb
+++ b/notebook/jetautoencoder_vae.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "acknowledged-input",
+   "id": "organic-jason",
    "metadata": {},
    "source": [
     "import library"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "billion-fluid",
+   "id": "periodic-librarian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "level-tanzania",
+   "id": "powerful-inspector",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nuclear-monster",
+   "id": "monetary-western",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tender-aside",
+   "id": "apart-sailing",
    "metadata": {},
    "source": [
     "loss function"
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "authentic-formation",
+   "id": "demographic-grill",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "invalid-nancy",
+   "id": "forced-explosion",
    "metadata": {},
    "source": [
     "build model"
@@ -122,13 +122,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "devoted-livestock",
+   "id": "british-retention",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_model(original_dim, intermediate_dim, latent_dim):\n",
     "    # Encoder\n",
-    "\n",
+    "    \n",
     "    x = layers.Input(shape=(original_dim,))\n",
     "    h = layers.Dense(intermediate_dim, activation='relu')(x)\n",
     "\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smart-bible",
+   "id": "hindu-declaration",
    "metadata": {},
    "source": [
     "load data"
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "marked-journalist",
+   "id": "subsequent-mistake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,27 +182,85 @@
     "    df = events.arrays(library=\"pd\")\n",
     "    return df\n",
     "\n",
-    "inputfile = 'test.root'\n",
+    "inputfile = 'QCD_HT500to700.root'\n",
     "df = get_df(inputfile, '*')\n",
     "df.dropna(inplace=True)\n",
     "\n",
-    "features = ['Jet_pt']\n",
+    "features = []\n",
+    "# variables: general\n",
+    "features += ['FatJet_pt', 'FatJet_eta', 'FatJet_phi', 'FatJet_DDX_jetNSecondaryVertices', \\\n",
+    "             'FatJet_DDX_jetNTracks', 'FatJet_DDX_z_ratio', 'FatJet_Proba', 'FatJet_area', \\\n",
+    "             'FatJet_jetId', 'FatJet_lsf3', 'FatJet_rawFactor', 'FatJet_n2b1', 'FatJet_n3b1', \\\n",
+    "            ]\n",
+    "\n",
+    "# variables: tau1\n",
+    "features += ['FatJet_tau1', 'FatJet_DDX_tau1_flightDistance2dSig', 'FatJet_DDX_tau1_trackEtaRel_0', \\\n",
+    "             'FatJet_DDX_tau1_trackEtaRel_1', 'FatJet_DDX_tau1_trackEtaRel_2', 'FatJet_DDX_tau1_trackSip3dSig_0', \\\n",
+    "             'FatJet_DDX_tau1_trackSip3dSig_1', 'FatJet_DDX_tau1_vertexDeltaR', 'FatJet_DDX_tau1_vertexEnergyRatio', \\\n",
+    "            ]\n",
+    "\n",
+    "# variables: tau2\n",
+    "features += ['FatJet_tau2', 'FatJet_DDX_tau2_flightDistance2dSig', 'FatJet_DDX_tau2_trackEtaRel_0', \\\n",
+    "             'FatJet_DDX_tau2_trackEtaRel_1', 'FatJet_DDX_tau2_trackEtaRel_3', 'FatJet_DDX_tau2_trackSip3dSig_0', \\\n",
+    "             'FatJet_DDX_tau2_trackSip3dSig_1', 'FatJet_DDX_tau2_vertexEnergyRatio', \\\n",
+    "            ]\n",
+    "\n",
+    "# variables: tau3 and tau4\n",
+    "features += ['FatJet_tau3', 'FatJet_tau4',]\n",
+    "\n",
+    "# variables: track\n",
+    "features += ['FatJet_DDX_trackSip2dSigAboveBottom_0', 'FatJet_DDX_trackSip2dSigAboveBottom_1', \\\n",
+    "             'FatJet_DDX_trackSip2dSigAboveCharm', 'FatJet_DDX_trackSip3dSig_0', \\\n",
+    "             'FatJet_DDX_trackSip3dSig_1', 'FatJet_DDX_trackSip3dSig_2', 'FatJet_DDX_trackSip3dSig_3', \\\n",
+    "            ]\n",
+    "\n",
+    "# variables: subjet 1\n",
+    "features += ['FatJet_subjet1_pt', 'FatJet_subjet1_eta', 'FatJet_subjet1_phi', \\\n",
+    "             'FatJet_subjet1_Proba', 'FatJet_subjet1_tau1', 'FatJet_subjet1_tau2', \\\n",
+    "             'FatJet_subjet1_tau3', 'FatJet_subjet1_tau4', 'FatJet_subjet1_n2b1', 'FatJet_subjet1_n3b1', \\\n",
+    "            ]\n",
+    "\n",
+    "# variables: subjet 2\n",
+    "features += ['FatJet_subjet2_pt', 'FatJet_subjet2_eta', 'FatJet_subjet2_phi', \\\n",
+    "             'FatJet_subjet2_Proba', 'FatJet_subjet2_tau1', 'FatJet_subjet2_tau2', \\\n",
+    "             'FatJet_subjet2_tau3', 'FatJet_subjet2_tau4', 'FatJet_subjet2_n2b1', 'FatJet_subjet2_n3b1', \\\n",
+    "            ]\n",
+    "\n",
+    "# variables: fatjet sv\n",
+    "features += ['FatJet_sv_costhetasvpv', 'FatJet_sv_d3dsig', 'FatJet_sv_deltaR', 'FatJet_sv_dxysig', \\\n",
+    "             'FatJet_sv_enration', 'FatJet_sv_normchi2', 'FatJet_sv_ntracks', 'FatJet_sv_phirel', \\\n",
+    "             'FatJet_sv_pt', 'FatJet_sv_ptrel', \\\n",
+    "            ]\n",
+    "\n",
     "features = sorted(features)\n",
     "\n",
+    "original_dim = len(features)\n",
+    "\n",
     "X = df[features]\n",
-    "x_train, x_test = train_test_split(X, test_size=0.20)"
+    "#X = X.astype(np.float32)\n",
+    "#print(X.dtypes)\n",
+    "X = X.to_numpy()\n",
+    "x_train, x_test = train_test_split(X, test_size=0.20)\n",
+    "#print(x_train.shape)\n",
+    "#x_train = np.expand_dims(x_train, axis=-1)\n",
+    "#x_test = np.expand_dims(x_test, axis=-1)\n",
+    "#print(x_train.shape)\n",
+    "#x_train = x_train.reshape(-1, original_dim)\n",
+    "#x_test = x_test.reshape(-1, original_dim)\n",
+    "#print(x_train.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "military-firewall",
+   "id": "sized-norfolk",
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_dset(df): \n",
     "    df = df.copy()\n",
-    "    dataset = tf.data.Dataset.from_tensor_slices((dict(df), dict(df)))\n",
+    "    #dataset = tf.data.Dataset.from_tensor_slices((dict(df), dict(df)))\n",
+    "    dataset = tf.data.Dataset.from_tensor_slices((df, df))\n",
     "    dataset = dataset.batch(batch_size, drop_remainder=False)\n",
     "    dataset = dataset.prefetch(tf.data.experimental.AUTOTUNE)\n",
     "    return dataset\n",
@@ -213,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "friendly-binary",
+   "id": "ordinary-master",
    "metadata": {},
    "source": [
     "get model"
@@ -222,11 +280,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "secret-founder",
+   "id": "conceptual-feature",
    "metadata": {},
    "outputs": [],
    "source": [
-    "original_dim = len(features)\n",
     "intermediate_dim = 16\n",
     "latent_dim = 8\n",
     "\n",
@@ -237,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "statutory-infrared",
+   "id": "worse-thermal",
    "metadata": {},
    "source": [
     "train model"
@@ -246,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "great-while",
+   "id": "natural-browser",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,11 +339,14 @@
     "num_epochs = 20\n",
     "\n",
     "history = model.fit(\n",
-    "    x_train_dataset,\n",
+    "    x_train,\n",
+    "    x_train,\n",
+    "    #x_train_dataset,\n",
     "    shuffle=True,\n",
     "    epochs=num_epochs,\n",
     "    batch_size=batch_size,\n",
-    "    validation_data=x_test_dataset,\n",
+    "    validation_data=(x_test, x_test),\n",
+    "    #validation_data=x_test_dataset,\n",
     "    callbacks=[cp_callback, get_lr_callback()]\n",
     ")"
    ]
@@ -294,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "loaded-wells",
+   "id": "seventh-requirement",
    "metadata": {},
    "outputs": [],
    "source": []
