added call method to vae

--- a/notebook/jetautoencoder_vae.ipynb
+++ b/notebook/jetautoencoder_vae.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "robust-aircraft",
+   "id": "metropolitan-title",
    "metadata": {},
    "source": [
     "import library"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alternative-excerpt",
+   "id": "toxic-broadcast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compliant-tunisia",
+   "id": "spectacular-planning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "original-fruit",
+   "id": "copyrighted-still",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extended-sight",
+   "id": "naughty-ethernet",
    "metadata": {},
    "source": [
     "loss function"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "genuine-august",
+   "id": "occupied-economics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "linear-arkansas",
+   "id": "ecological-empire",
    "metadata": {},
    "source": [
     "build model"
@@ -104,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "chicken-affiliation",
+   "id": "traditional-sheep",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,12 +182,17 @@
     "            \"loss\": self.total_loss_tracker.result(),\n",
     "            \"reconstruction_loss\": self.reconstruction_loss_tracker.result(),\n",
     "            \"kl_loss\": self.kl_loss_tracker.result(),\n",
-    "        }"
+    "        }\n",
+    "    \n",
+    "    def call(self, data):\n",
+    "        z_mean, z_log_var, z = self.encoder(data)\n",
+    "        y_pred = self.decoder(z)\n",
+    "        return y_pred "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-billy",
+   "id": "hungry-relay",
    "metadata": {},
    "source": [
     "load data"
@@ -196,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smaller-contact",
+   "id": "defensive-nitrogen",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +283,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "satisfactory-worth",
+   "id": "rural-identification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "victorian-acrylic",
+   "id": "honey-infrared",
    "metadata": {},
    "source": [
     "get model"
@@ -304,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stuffed-question",
+   "id": "driven-africa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "considerable-premiere",
+   "id": "cultural-nitrogen",
    "metadata": {},
    "source": [
     "train model"
@@ -331,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incorporated-county",
+   "id": "seeing-dressing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "offensive-resort",
+   "id": "czech-respect",
    "metadata": {},
    "outputs": [],
    "source": []
